<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="custom_squash_title">Custom Squash!</string>
    <string name="keywords_citrus">Citrus-CAF</string>
    <string name="ui_title">Ui</string>
    <string name="buttons_title">Buttons</string>
    <string name="statusbar_title">StatusBar</string>
    <string name="misc_title">Misc</string>
    <string name="lockscreen_title">Lock Screen</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="volume_rocker_music_controls_title">Playback control</string>
    <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
    <string name="wake_when_plugged_or_unplugged_title">Wake on plug</string>
    <string name="wake_when_plugged_or_unplugged_summary">Turn the screen on when connecting or disconnecting a power source</string>
    <string name="expanded_desktop_category">Expanded Desktop</string>
    <string name="expanded_hide_nothing">Hide nothing</string>
    <string name="expanded_hide_status">Hide status bar</string>
    <string name="expanded_hide_navigation">Hide navigation bar</string>
    <string name="expanded_hide_both">Hide both</string>
    <string name="expanded_nothing_to_show">To add a custom per-app configuration for expanded state, set "Enabled for all" to the off position</string>
    <string name="expanded_desktop_state">Expanded state</string>
    <string name="expanded_enabled_for_all">Enabled for all</string>
    <string name="expanded_user_configurable">User configurable</string>
    <string name="expanded_desktop_style">Expanded desktop style</string>
    <string name="expanded_desktop_style_description">Choose a default expanded desktop style</string>
    <string name="expanded_desktop_title">Expanded desktop options</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="volume_keys_control_media_stream_title">Volume keys control media volume</string>
    <string name="volume_keys_control_media_stream_summary">Force volume keys to control media stream</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="show_network_traffic_state">Status bar traffic monitor</string>
    <string name="show_network_traffic_unit">Display unit</string>
    <string name="show_network_traffic_frequency">Update interval</string>
    <string name="show_network_traffic_disable">Disabled</string>
    <string name="show_network_traffic_up">Outgoing</string>
    <string name="show_network_traffic_down">Incoming</string>
    <string name="show_network_traffic_all">Outgoing and incoming</string>
    <string name="show_network_traffic_bit">Bits per second</string>
    <string name="show_network_traffic_byte">Bytes per second</string>
    <string name="show_network_traffic_500">500 ms</string>
    <string name="show_network_traffic_1000">1000 ms</string>
    <string name="show_network_traffic_1500">1500 ms</string>
    <string name="show_network_traffic_2000">2000 ms</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
    <string name="network_traffic_autohide_threshold">Inactivity threshold</string>
    <string name="network_traffic_hidearrow">Hide arrows</string>
    <string name="network_traffic_hidearrow_summary">Hide the arrows in the traffic indicators</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="navigation_category">Navigation</string>
    <string name="navbar_interface_title">Interface</string>
    <string name="navbar_size">Bar size</string>
    <string name="navbar_mode">Navigation mode</string>
    <string name="navbar_visibility">Enable navigation bar</string>
    <string name="navigationbar_settings_title">Navigation bar</string>
    <string name="navigationbar_settings_summary">Customize navigation style and behavior</string>
    <string name="navbar_general_title">Advanced</string>
    <string name="navigation_bar_left_title">Left-handed mode</string>
    <string name="navigation_bar_left_summary">Place the navigation bar on the left side of the screen in landscape mode</string>
    <string name="info_pref_note_title">Note</string>
    <string name="smartbar_interface">SmartBar</string>
    <string name="icon_pack_picker_dialog_title">Icon packs</string>
    <string name="image_exceeds_max_allowed_size">Image must not exceed 512x512</string>
    <string name="invalid_icon_from_uri">Unable to load image from content provider</string>
    <string name="picker_activities">Activities</string>
    <string name="select_custom_app_title">Select custom app</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="profile_applist_title">Applications</string>
    <string name="default_string">Default</string>
    <string name="reset">Reset</string>
    <string name="choose_action_title">Choose action</string>
    <string name="quicksettings_category">Quick settings</string>
    <string name="qs_layout_category">QS tiles layout</string>
    <string name="qs_rows_portrait_title">Rows (portrait)</string>
    <string name="qs_rows_landscape_title">Rows (landscape)</string>
    <string name="qs_tile_title_visibility_title">QS tile titles</string>
    <string name="qs_tile_title_visibility_summary_on">QS tiles titles are now visible</string>
    <string name="qs_tile_title_visibility_summary_off">QS tiles titles are now gone</string>
    <string name="qqs_scroll_title">Scroll small QS tiles</string>
    <string name="qqs_scroll_summary">Allow scrolling through the small QS tiles</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="colors_title">Colors</string>
    <string name="keyguard_torch_title">Lockscreen torch</string>
    <string name="keyguard_torch_summary">Longpress power button while screen is off to turn on flashlight</string>
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_summary">Show brightness slider on quick settings panel</string>
    <string name="lockscreen_items_settings_title">Lockscreen Items</string>
    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="screen_record_chord_title">Power  volume up behavior</string>
    <string name="ticker_screen_title">Ticker</string>
    <string name="ticker_title">Status Bar Ticker</string>
    <string name="ticker_font_style_title">Font Style</string>
    <string name="ticker_font_size_title">Font Size</string>
    <string name="headsup_category">HeadsUp Settings</string>
    <string name="headsup_settings_title">Heads up notifications</string>
    <string name="always_headsup_dialer_title">Force heads up for dialer</string>
    <string name="always_headsup_dialer_summary">Show heads up for dialer even if heads up is off to avoid fullscreen dialer on incoming calls</string>
    <string name="hardware_keys_settings_title">Hardware Keys</string>
    <string name="custom_settings_summary_title">CustomSquash summary text</string>
    <string name="custom_summary_cat_title">Custom summary</string>
    <string name="custom_summary_randomize_title">Randomize summary</string>
    <string name="custom_summary_randomize_explain">Pre-written summaries will be selected at random and will change everytime you start the Settings app.\nThis overrides any custom summary set.</string>
    <string name="toast_icon_title">Toast icon</string>
    <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
    <string name="lockscreen_visualizer_title">Display music visualizer</string>
    <string name="recents_category">Recents</string>
    <string name="show_clear_all_recents_button_title">Clear-all FAB</string>
    <string name="show_clear_all_recents_button_summary_on">Show clear all FAB</string>
    <string name="show_clear_all_recents_button_summary_off">Show AOSP clear all</string>
    <string name="recents_clear_all_location_title">Clear all FAB location</string>
    <string name="systemui_recents_mem_display_title">Show memory bar</string>
    <string name="systemui_recents_mem_display_summary">Display RAM usage under recents view</string>
    <string name="status_bar_custom_header_title">Custom header image</string>
    <string name="daylight_header_pack_title">Header image pack</string>
    <string name="status_bar_custom_header_shadow_title">Shadow header image</string>
    <string name="status_bar_custom_header_shadow_summary">For better visibility on bright images</string>
    <string name="custom_header_provider_title">Header provider</string>
    <string name="custom_header_browse_title">Browse installed headers</string>
    <string name="custom_header_browse_summary">Long press on any image to use for static mode</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Display real time charger current, voltage and battery temperature on lockscreen while charging</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
    <string name="fp_unlock_keystore_title">FP unlock</string>
    <string name="fp_unlock_keystore_summary">Unlock device with fingerprint after reboot without PIN/Password/Pattern\nNote: at your own risk!</string>
    <string name="fp_cat_title">Fingerprint</string>
    <string name="weather_config_title">Service settings</string>
    <string name="weather_config_summary"></string>
    <string name="weather_icon_pack_title">Condition icon pack</string>
    <string name="lockscreen_targets_title">Bottom L/R shortcuts</string>
    <string name="three_finger_gesture">Three finger gesture</string>
    <string name="three_finger_gesture_summary">Swipe three finger to screenshot</string>
    <string name="allow_incall_home_title">Home button when ringing</string>
    <string name="allow_incall_home_summary">Allow to use Home button when device is ringing</string>
    <string name="wired_ringtone_focus_mode_title">Where to play ringtones from</string>
    <string name="pref_scrollingcache_title">Scrolling cache</string>
    <string name="pref_scrollingcache_summary">Scrolling cache may improve scrolling performance at the cost of memory</string>
    <string name="hide_apps_from_recents_title">Hidden apps</string>
    <string name="hide_apps_from_recents_summary">Pick which apps to exclude from the recents panel</string>
    <string name="device_additional_buttons_title">Notification Slider</string>
    <string name="immersive_recents_title">Immersive Recents</string>
    <string name="immersive_recents_summary">Change the view of the recents screen</string>
    <string name="immersive_recents_dialog_title">Select recents view</string>
    <string name="brightness_icon_title">Brightness icon </string>
    <string name="brightness_icon_summary">Show a brightness icon to the left of the brighness slider to adjust auto-brightness</string>
</resources>