<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2016 Citrus-CAF Project
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/misc_title"
    android:layout="@layout/tab"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <com.citrus.settings.preference.SystemSettingSwitchPreference
        android:key="toast_icon"
        android:title="@string/toast_icon_title"
        android:summary="@string/toast_icon_summary"
        android:defaultValue="false" />

    <!-- Three-fingers-swipe to screenshot -->
       <com.citrus.settings.preference.SystemSettingSwitchPreference
            android:key="three_finger_gesture"
            android:title="@string/three_finger_gesture"
            android:summary="@string/three_finger_gesture_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="wired_ringtone_focus_mode"
            android:title="@string/wired_ringtone_focus_mode_title"
            android:entries="@array/wired_ringtone_focus_mode_entries"
            android:entryValues="@array/wired_ringtone_focus_mode_values" />

    <ListPreference
        android:key="pref_scrollingcache"
        android:dialogTitle="@string/pref_scrollingcache_title"
        android:title="@string/pref_scrollingcache_title"
        android:summary="@string/pref_scrollingcache_summary"
        android:entries="@array/entries_scrollingcache"
        android:entryValues="@array/values_scrollingcache" />

    <PreferenceCategory
        android:title="@string/custom_summary_cat_title">

    <Preference
        android:key="custom_settings_summary"
        android:title="@string/custom_settings_summary_title" />

    <com.citrus.settings.preference.SystemSettingSwitchPreference
        android:key="custom_settings_random_summary"
        android:title="@string/custom_summary_randomize_title"
        android:summary="@string/custom_summary_randomize_explain"
        android:defaultValue="false" />
    </PreferenceCategory>

        <PreferenceCategory
            android:title="@string/recents_category" >

         <com.citrus.settings.preference.SystemSettingSwitchPreference
            android:key="show_clear_all_recents"
            android:title="@string/show_clear_all_recents_button_title"
            android:summaryOn="@string/show_clear_all_recents_button_summary_on"
            android:summaryOff="@string/show_clear_all_recents_button_summary_off"
            android:defaultValue="false" />

         <ListPreference
            android:key="recents_clear_all_location"
            android:title="@string/recents_clear_all_location_title"
            android:entries="@array/recents_clear_all_location_entries"
            android:entryValues="@array/recents_clear_all_location_values"
            android:defaultValue="3"
            android:dependency="show_clear_all_recents" />

        <com.citrus.settings.preference.SystemSettingSwitchPreference
            android:key="systemui_recents_mem_display"
            android:title="@string/systemui_recents_mem_display_title"
            android:summary="@string/systemui_recents_mem_display_summary"
            android:defaultValue="false" />

         <ListPreference
            android:key="immersive_recents"
            android:title="@string/immersive_recents_title"
            android:summary="@string/immersive_recents_summary"
            android:dialogTitle="@string/immersive_recents_dialog_title"
            android:entries="@array/immersive_recents_entries"
            android:entryValues="@array/immersive_recents_values"
            android:persistent="false" />

    <PreferenceScreen
        android:key="hide_app_from_recents"
        android:title="@string/hide_apps_from_recents_title"
        android:summary="@string/hide_apps_from_recents_summary" >
             <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.settings"
                 android:targetClass="com.citrus.settings.fragments.HAFRAppListActivity" />
     </PreferenceScreen>

</PreferenceCategory>

</PreferenceScreen>
