<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 Citrus-AOSP Project
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/lockscreen_title"
    android:layout="@layout/tab"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

        <PreferenceScreen
            android:fragment="com.citrus.settings.fragments.LockScreenItemsSettings"
            android:key="lockscreen_items"
            android:title="@string/lockscreen_items_settings_title" />

        <PreferenceScreen
            android:title="@string/lockscreen_targets_title">
        <intent
            android:targetPackage="com.android.systemui"
            android:targetClass="com.android.systemui.custom.LockscreenShortcutsActivity" />
        </PreferenceScreen>

        <com.citrus.settings.preference.SystemSettingSwitchPreference
            android:key="keyguard_toggle_torch"
            android:title="@string/keyguard_torch_title"
            android:summary="@string/keyguard_torch_summary"
            android:defaultValue="false" />

        <com.citrus.settings.preference.SystemSettingSwitchPreference
            android:key="lockscreen_battery_info"
            android:title="@string/lockscreen_battery_info_title"
            android:summary="@string/lockscreen_battery_info_summary"
            android:defaultValue="true" />

        <com.citrus.settings.preference.SecureSettingSwitchPreference
            android:key="lockscreen_visualizer"
            android:title="@string/lockscreen_visualizer_title"
            android:defaultValue="true"/>

        <com.citrus.settings.preference.SystemSettingSwitchPreference
            android:key="double_tap_sleep_anywhere"
            android:title="@string/double_tap_sleep_anywhere_title"
            android:summary="@string/double_tap_sleep_anywhere_summary"
            android:defaultValue="false" />

	<com.citrus.settings.preference.SystemSettingSwitchPreference
	    android:key="lockscreen_media_metadata"
            android:title="@string/media_art_title"
            android:summary="@string/media_art_summary"
            android:defaultValue="true" />

       <PreferenceCategory
            android:key="category_fp"
            android:title="@string/fp_cat_title">

       <com.citrus.settings.preference.SystemSettingSwitchPreference
            android:key="fingerprint_success_vib"
            android:title="@string/fprint_sucess_vib_title"
            android:summary="@string/fprint_sucess_vib_summary"
            android:defaultValue="true" />

       <SwitchPreference
            android:key="fp_unlock_keystore"
            android:title="@string/fp_unlock_keystore_title"
            android:summary="@string/fp_unlock_keystore_summary"
            android:persistent="false" />
       </PreferenceCategory>

</PreferenceScreen>
