<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015-2016 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/quicksettings_category" >

    <com.citrus.settings.preference.SecureSettingSwitchPreference
        android:key="qs_show_brightness"
        android:title="@string/qs_brightness_slider_title"
        android:summary="@string/qs_brightness_slider_summary"
        android:defaultValue="true"/>
 
    <com.citrus.settings.preference.SystemSettingSwitchPreference
        android:key="qs_show_brightness_icon"
        android:title="@string/brightness_icon_title"
        android:summary="@string/brightness_icon_summary"
        android:defaultValue="false"
        android:dependency="qs_show_brightness"/>

    <com.citrus.settings.preference.SystemSettingSwitchPreference
        android:key="qs_tile_title_visibility"
        android:title="@string/qs_tile_title_visibility_title"
        android:summaryOn="@string/qs_tile_title_visibility_summary_on"
        android:summaryOff="@string/qs_tile_title_visibility_summary_off"
        android:defaultValue="true"/>

    <com.citrus.settings.preference.SystemSettingSwitchPreference
        android:key="qs_quickbar_scroll_enabled"
        android:title="@string/qqs_scroll_title"
        android:summary="@string/qqs_scroll_summary"
        android:defaultValue="false"/>

    <com.citrus.settings.preference.SystemSettingSwitchPreference
        android:key="status_bar_quick_qs_pulldown"
        android:title="@string/status_bar_quick_qs_pulldown"
        android:summary="@string/status_bar_quick_qs_pulldown_summary"
        android:defaultValue="false" />

    <PreferenceCategory
        android:key="qs_layout_category"
        android:title="@string/qs_layout_category">

    <com.citrus.settings.preference.CustomSeekBarPreference
        android:key="qs_columns_portrait"
        android:title="@string/qs_columns_portrait_title"
        android:max="7"
        settings:min="1"
        settings:units="" />

    <com.citrus.settings.preference.CustomSeekBarPreference
        android:key="qs_columns_landscape"
        android:title="@string/qs_columns_landscape_title"
        android:max="9"
        settings:min="1"
        settings:units="" />

    <com.citrus.settings.preference.CustomSeekBarPreference
        android:key="qs_rows_portrait"
        android:title="@string/qs_rows_portrait_title"
        android:max="5"
        settings:min="1"
        settings:units="" />

    <com.citrus.settings.preference.CustomSeekBarPreference
        android:key="qs_rows_landscape"
        android:title="@string/qs_rows_landscape_title"
        android:max="3"
        settings:min="1"
        settings:units="" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="weather_category"
        android:title="@string/weather_title">

        <PreferenceScreen
            android:title="@string/weather_config_title"
            android:summary="@string/weather_config_summary" >
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="org.omnirom.omnijaws"
                    android:targetClass="org.omnirom.omnijaws.SettingsActivityService" />
        </PreferenceScreen>

        <ListPreference
            android:key="weather_icon_pack"
            android:title="@string/weather_icon_pack_title"
            android:persistent="false" />
    </PreferenceCategory>
  
    <PreferenceCategory
        android:key="category_custom_header"
        android:title="@string/custom_header_title">

        <com.citrus.settings.preference.SystemSettingSwitchPreference
            android:key="status_bar_custom_header"
            android:title="@string/status_bar_custom_header_title"
            android:defaultValue="false" />

        <ListPreference
            android:key="custom_header_provider"
            android:title="@string/custom_header_provider_title"
            android:persistent="false"
            android:entries="@array/custom_header_provider_entries"
            android:entryValues="@array/custom_header_provider_values"
            android:dependency="status_bar_custom_header" />

        <ListPreference
            android:key="daylight_header_pack"
            android:title="@string/daylight_header_pack_title"
            android:persistent="false"
            android:dependency="status_bar_custom_header" />

        <Preference
            android:key="custom_header_browse"
            android:title="@string/custom_header_browse_title"
            android:summary="@string/custom_header_browse_summary"
            android:persistent="false"
            android:dependency="status_bar_custom_header" >
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="org.omnirom.omnistyle"
                    android:targetClass="org.omnirom.omnistyle.PickHeaderActivity" />
        </Preference>

        <com.citrus.settings.preference.CustomSeekBarPreference
            android:key="status_bar_custom_header_shadow"
            android:title="@string/status_bar_custom_header_shadow_title"
            android:summary="@string/status_bar_custom_header_shadow_summary"
            android:max="100"
            settings:min="0"
            settings:units="%"
            android:persistent="false"
            android:dependency="status_bar_custom_header" />

    </PreferenceCategory>

</PreferenceScreen>
