<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2016 Citrus-CAF Project
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/buttons_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

        <PreferenceScreen
            android:key="hardware_keys_settings"
            android:title="@string/hardware_keys_settings_title"
            android:fragment="com.citrus.settings.fragments.HardwareKeys" />

        <Preference
            android:key="navigation_options"
            android:fragment="com.citrus.settings.fragments.NavbarSettings"
            android:title="@string/navigationbar_settings_title" />

       <PreferenceScreen
        android:key="device_additional_buttons"
        android:title="@string/device_additional_buttons_title">
        <intent
            android:action="com.android.settings.action.EXTRA_SETTINGS"
            android:targetPackage="com.cyanogenmod.settings.device"
            android:targetClass="com.cyanogenmod.settings.device.ButtonSettings" />
       </PreferenceScreen>

        <ListPreference
            android:key="screenrecord_chord_type"
            android:title="@string/screen_record_chord_title"
            android:entries="@array/screen_record_chord_entries"
            android:entryValues="@array/screen_record_chord_values" />

        <SwitchPreference
            android:key="volume_rocker_wake"
            android:summary="@string/volume_rocker_wake_summary"
            android:title="@string/volume_rocker_wake_title"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="volume_rocker_music_controls"
            android:summary="@string/volume_rocker_music_controls_summary"
            android:title="@string/volume_rocker_music_controls_title"
            android:defaultValue="true" />

        <com.citrus.settings.preference.SystemSettingSwitchPreference
            android:key="volume_keys_control_media_stream"
            android:title="@string/volume_keys_control_media_stream_title"
            android:summary="@string/volume_keys_control_media_stream_summary"
            android:defaultValue="false" />

        <com.citrus.settings.preference.SystemSettingSwitchPreference
            android:key="allow_incall_home"
            android:title="@string/allow_incall_home_title"
            android:summary="@string/allow_incall_home_summary"
            android:defaultValue="true" />

</PreferenceScreen>
