<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 The VRToxin Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/ticker_screen_title">

    <ListPreference
        android:entries="@array/ticker_mode_entries"
        android:entryValues="@array/ticker_mode_values"
        android:key="status_bar_show_ticker"
        android:summary="%s"
        android:title="@string/ticker_title" />

    <com.citrus.settings.preference.CustomSeekBarPreference
        android:key="status_bar_ticker_font_size"
        android:title="@string/ticker_font_size_title"
        android:defaultValue="14"
        settings:max="20"
        settings:min="4"
        settings:units="dp" />

    <ListPreference
        android:key="status_bar_ticker_font_style"
        android:entries="@array/fonts_entries"
        android:entryValues="@array/fonts_values"
        android:title="@string/ticker_font_style_title" />

    <PreferenceCategory
        android:key="ticker_colors"
        android:title="@string/colors_title">

         <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="status_bar_ticker_text_color"
            android:title="@string/text_title"
            android:defaultValue="0xffffffff" />

         <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="status_bar_ticker_icon_color"
            android:title="@string/icon_title"
            android:defaultValue="0xffffffff" />

	</PreferenceCategory>

       <PreferenceCategory
        android:key="headsup_notifications_category"
        android:title="@string/headsup_category">

     <PreferenceScreen
        android:key="heads_up_settings"
        android:title="@string/headsup_settings_title"
        android:fragment="com.citrus.settings.fragments.HeadsUpSettings"/>

  <!-- Dialer Forced Heads up switch -->
  <com.citrus.settings.preference.SystemSettingSwitchPreference
        android:key="always_headsup_dialer"
        android:title="@string/always_headsup_dialer_title"
        android:summary="@string/always_headsup_dialer_summary"
        android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
